...
                            .padding(bottom = 32.dp),
                        contentAlignment = Alignment.Center
                    ) {
                        Button(
                            onClick = { codeMatched = true },
                            colors = ButtonDefaults.buttonColors(containerColor = AccentOrange),
                            modifier = Modifier.testTag("simulate_match_scan_button")
                        ) {
                            Text(Localizer.t("Simulate Match Scan"), color = Color.White)
                        }
                    }
                } else {
                    Spacer(modifier = Modifier.height(32.dp))
...
